Fix nav menu box spacing

--- a/component-library/shared/styles/3-modules/_header.scss
+++ b/component-library/shared/styles/3-modules/_header.scss
@@ -78,9 +78,7 @@
     .nav__list {
       width: 100%;
       max-width: 100%;
-      padding-left: 40px;
-      align-items: center;
-      justify-content: center;
+      padding-left: 0px;
       height: 100%;
 
       .nav__item {
